k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: human-pose
  template:
    metadata:
      labels:
        app: human-pose
    spec:
      containers:
        - name: app
          image: pepperonipizzalarge/app-gc
          ports:
            - containerPort: 5000
