k8s/app-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: human-pose
  ports:
    - port: 5000
      targetPort: 5000
